ULF-537: Fixed ‘gratisbanner’ placement on mobile

--- a/profiles/ulf/themes/ulf_default/sass/patterns/_ribbon.scss
+++ b/profiles/ulf/themes/ulf_default/sass/patterns/_ribbon.scss
@@ -96,14 +96,20 @@
   height: 150px;
   position: absolute;
   overflow: hidden;
-  top: 0;
+  bottom: 0px;
   pointer-events: none;
 
-  &.is-content {
-    font-size: 1.15em;
-    height: 200px;
-    width: 200px;
+  @include breakpoint($node-breakpoint) {
+    &.is-content {
+      font-size: 1.15em;
+
+      top: 0px;
+      bottom: auto;
+      height: 200px;
+      width: 200px;
+    }
   }
+
 }
 
 .ribbon-wrapper.fixed {
@@ -118,66 +124,48 @@
   right: 0;
 }
 
-.ribbon-wrapper.left-bottom {
-  position: absolute;
-  top: inherit;
-  bottom: 0;
-  left: 0;
-}
-
-.ribbon-wrapper.right-bottom {
-  position: absolute;
-  top: inherit;
-  bottom: 0;
-  right: 0;
-}
-
-.ribbon-wrapper.right .ribbon {
-  top: 42px;
-  right: -43px;
-
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
 .ribbon-wrapper.left .ribbon {
-  top: 22px;
   left: -63px;
+  top: 40px;
 
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  @include rotate(45deg);
+
+  @include breakpoint($node-breakpoint){
+    @include rotate(-45deg);
+  }
 
   &.is-content {
-    top: 40px;
-    left: -80px;
+    left: -105px;
+    top: auto;
+    bottom: 25px;
+
+    @include breakpoint($node-breakpoint) {
+      left: -90px;
+      top: 40px;
+      bottom: auto;
+    }
   }
 }
 
-
-.ribbon-wrapper.left-bottom .ribbon {
-  top: 80px;
-  left: -43px;
-
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.ribbon-wrapper.right-bottom .ribbon {
-  top: 80px;
+.ribbon-wrapper.right .ribbon {
   right: -43px;
+  top: 40px;
 
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  @include rotate(-45deg);
+
+  @include breakpoint($node-breakpoint){
+    @include rotate(45deg);
+  }
+
+  &.is-content {
+    right: -105px;
+    top: auto;
+    bottom: 25px;
+
+    @include breakpoint($node-breakpoint) {
+      right: -90px;
+      top: 40px;
+      bottom: auto;
+    }
+  }
 }
